--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   flutter_launcher_icons: ^0.14.4
   url_launcher: ^6.3.1
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
